--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
+  background-color: #0a192f;
 }
