--- a/src/style/ProjectCard.css
+++ b/src/style/ProjectCard.css
@@ -22,7 +22,7 @@
 .card-description {
     font-size: 16px;
     color: #a8b2d1;
-    padding-top: 7%;
+    padding-top: 10%;
     text-align: left;
     padding-right: 10%;
 }
@@ -30,6 +30,6 @@
 .card-tech {
     font-size: 14px;
     color: #a8b2d1;
-    padding-top: 5%;
+    padding-top: 10%;
 
 }
